# dataspace-downloader

./: Cargo.toml  LICENSE.txt  README.md
src/: catalog.rs  main.rs  storage.rs
